--- a/WslDockerTool.Net5/Themes/Basic.xaml
+++ b/WslDockerTool.Net5/Themes/Basic.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:converters="clr-namespace:WslDockerTool.Net5.Controls.Converters">
 	<ResourceDictionary.MergedDictionaries>
 		<ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml" />
 		<ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
@@ -7,7 +7,7 @@
 		<Setter Property="FontSize" Value="20" />
 		<Setter Property="VerticalAlignment" Value="Center" />
 	</Style>
-
+	<converters:BytesToStringConverter x:Key="bytesToStringConverter"></converters:BytesToStringConverter>
 	<!--<Style BasedOn="{StaticResource BaseStyle}" TargetType="DataGrid" />-->
 
 	<!--<Style BasedOn="{StaticResource TreeViewBaseStyle}" TargetType="TreeView">
