--- a/WslDockerTool.Net5/Themes/Basic.xaml
+++ b/WslDockerTool.Net5/Themes/Basic.xaml
@@ -1,13 +1,18 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:converters="clr-namespace:WslDockerTool.Net5.Controls.Converters">
+﻿<ResourceDictionary
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:converters="clr-namespace:WslDockerTool.Net5.Controls.Converters"
+	xmlns:hc="https://handyorg.github.io/handycontrol">
 	<ResourceDictionary.MergedDictionaries>
 		<ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml" />
 		<ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
+		<ResourceDictionary Source="pack://application:,,,/WslDockerTool.Net5;component/Themes/DataGrid.xaml" />
 	</ResourceDictionary.MergedDictionaries>
 	<Style BasedOn="{StaticResource TextBlockDefault}" TargetType="TextBlock">
 		<Setter Property="FontSize" Value="20" />
 		<Setter Property="VerticalAlignment" Value="Center" />
 	</Style>
-	<converters:BytesToStringConverter x:Key="bytesToStringConverter"></converters:BytesToStringConverter>
+	<converters:BytesToStringConverter x:Key="bytesToStringConverter" />
 	<!--<Style BasedOn="{StaticResource BaseStyle}" TargetType="DataGrid" />-->
 
 	<!--<Style BasedOn="{StaticResource TreeViewBaseStyle}" TargetType="TreeView">
@@ -49,4 +54,7 @@
 		</Brush.RelativeTransform>
 		
 	</Brush>-->
+	<!--<Style BasedOn="{StaticResource  BaseStyle }" x:Key="BaseWindow" TargetType="hc:Window">
+		
+	</Style>-->
 </ResourceDictionary>
