--- a/WslDockerTool.Net5/Views/Container/ContainerList.xaml
+++ b/WslDockerTool.Net5/Views/Container/ContainerList.xaml
@@ -3,6 +3,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:hc="https://handyorg.github.io/handycontrol"
 	xmlns:local="clr-namespace:WslDockerTool.Net5.Views.Container"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:prism="http://prismlibrary.com/"
@@ -10,6 +11,60 @@
 	d:DesignWidth="800"
 	prism:ViewModelLocator.AutoWireViewModel="True"
 	mc:Ignorable="d">
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="50" />
+			<RowDefinition Height="*" />
+		</Grid.RowDefinitions>
+		<StackPanel>
 
-	<Grid />
+			<hc:ButtonGroup Width="200">
+				<Button Content="查询" Style="{DynamicResource ButtonDashedSuccess}" />
+				<Button Content="添加" Style="{DynamicResource ButtonDashedInfo}" />
+				<Button Content="移除" Style="{DynamicResource ButtonDashedInfo}" />
+			</hc:ButtonGroup>
+		</StackPanel>
+		<DataGrid
+			Grid.Row="1"
+			AutoGenerateColumns="False"
+			HeadersVisibility="All"
+			ItemsSource="{Binding Items}"
+			RowHeaderWidth="60">
+			<DataGrid.RowHeaderTemplate>
+				<DataTemplate>
+					<CheckBox IsChecked="{Binding IsSelected, RelativeSource={RelativeSource AncestorType=DataGridRow}}" />
+				</DataTemplate>
+			</DataGrid.RowHeaderTemplate>
+			<DataGrid.Columns>
+				<DataGridTextColumn
+					Width="120"
+					Binding="{Binding ID}"
+					CanUserResize="False"
+					Header="id"
+					IsReadOnly="True" />
+				<DataGridTextColumn
+					Width="80"
+					Binding="{Binding NameF}"
+					Header="名称" />
+				<DataGridTextColumn
+					Width="*"
+					Binding="{Binding Image}"
+					Header="镜像名称" />
+
+				<DataGridTextColumn
+					Width="*"
+					Binding="{Binding PortF}"
+					Header="端口" />
+				<DataGridTextColumn
+					Width="*"
+					Binding="{Binding Status}"
+					Header="状态" />
+
+				<DataGridTextColumn
+					Width="120"
+					Binding="{Binding Created, StringFormat={}{0:yyyy-MM-dd}}"
+					Header="创建时间" />
+			</DataGrid.Columns>
+		</DataGrid>
+	</Grid>
 </UserControl>
