--- a/WslDockerTool.Net5/Views/MainWindow.xaml
+++ b/WslDockerTool.Net5/Views/MainWindow.xaml
@@ -54,9 +54,12 @@
 							</Style>
 						</StackPanel.Resources>
 
-						<Button Content="─" />
-						<Button Content="☐" />
-						<Button Content="✕" />
+						<Button Command="hc:ControlCommands.Reduce" Content="─" />
+						<Button Command="hc:ControlCommands.Enlarge" Content="☐" />
+						<Button
+							Command="hc:ControlCommands.CloseWindow"
+							CommandParameter="{Binding RelativeSource={RelativeSource Self}}"
+							Content="✕" />
 					</StackPanel>
 				</Grid>
 
@@ -84,6 +87,7 @@
 			Grid.RowSpan="2"
 			Grid.Column="1"
 			prism:RegionManager.RegionName="ContentRegion" />-->
+
 				<TreeView
 					Grid.Row="0"
 					Grid.RowSpan="2"
