--- a/WslDockerTool.Net5/Views/Container/CreateContainer.xaml
+++ b/WslDockerTool.Net5/Views/Container/CreateContainer.xaml
@@ -1,13 +1,58 @@
-﻿<Window
+﻿<UserControl
 	x:Class="WslDockerTool.Net5.Views.Container.CreateContainer"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:hc="https://handyorg.github.io/handycontrol"
 	xmlns:local="clr-namespace:WslDockerTool.Net5.Views.Container"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Title="创建容器"
-	Width="800"
-	Height="450"
+	xmlns:prism="http://prismlibrary.com/"
+	Width="400"
+	Height="350"
+	d:DesignHeight="350"
+	d:DesignWidth="400"
+	prism:ViewModelLocator.AutoWireViewModel="True"
 	mc:Ignorable="d">
-	<Grid />
-</Window>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="50" />
+			<RowDefinition Height="50" />
+			<RowDefinition Height="50" />
+			<RowDefinition Height="50" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="50" />
+		</Grid.RowDefinitions>
+		<StackPanel
+			Grid.Row="0"
+			Width="auto"
+			Margin="5,2"
+			Orientation="Horizontal">
+			<TextBlock>镜像名称:</TextBlock>
+			<TextBox Width="300" Height="40" />
+		</StackPanel>
+		<StackPanel
+			Grid.Row="1"
+			Width="auto"
+			Margin="5,2"
+			Orientation="Horizontal">
+			<TextBlock>镜像名称:</TextBlock>
+			<TextBox Width="300" Height="40" />
+		</StackPanel>
+		<StackPanel
+			Grid.Row="2"
+			Width="auto"
+			Margin="5,2"
+			Orientation="Horizontal">
+			<TextBlock>镜像名称:</TextBlock>
+			<TextBox Width="300" Height="40" />
+		</StackPanel>
+		<StackPanel
+			Grid.Row="3"
+			Width="auto"
+			Margin="5,2"
+			Orientation="Horizontal">
+			<TextBlock>镜像名称:</TextBlock>
+			<TextBox Width="300" Height="40" />
+		</StackPanel>
+	</Grid>
+</UserControl>
