--- a/WslDockerTool.Net5/Themes/Basic.xaml
+++ b/WslDockerTool.Net5/Themes/Basic.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:WslDockerTool.Net5.Controls"
 	xmlns:converters="clr-namespace:WslDockerTool.Net5.Controls.Converters"
 	xmlns:hc="https://handyorg.github.io/handycontrol">
 	<ResourceDictionary.MergedDictionaries>
@@ -12,6 +13,7 @@
 	<Style BasedOn="{StaticResource TextBlockDefault}" TargetType="TextBlock">
 		<Setter Property="FontSize" Value="20" />
 		<Setter Property="VerticalAlignment" Value="Center" />
+		<Setter Property="HorizontalAlignment" Value="Left" />
 	</Style>
 	<converters:BytesToStringConverter x:Key="bytesToStringConverter" />
 
@@ -19,15 +21,41 @@
 
 	<!--<Style BasedOn="{StaticResource TreeViewBaseStyle}" TargetType="TreeView">
 		<Style.Triggers>
-
-
 			<Trigger Property="IsKeyboardFocused" Value="True">
-				<Setter Property="Background" Value="Yellow" />
+				<Setter Property="TextBlock.Background" Value="Blue" />
 			</Trigger>
-
 		</Style.Triggers>
-
 	</Style>-->
+	<Style BasedOn="{StaticResource TreeViewItemBaseStyle}" TargetType="TreeViewItem">
+		<Style.Triggers>
+			<Trigger Property="IsSelected" Value="True">
+				<Setter Property="TextBlock.Background" Value="Blue" />
+				<Setter Property="Background" Value="Azure" />
+				<Setter Property="Foreground" Value="AliceBlue" />
+				<Setter Property="FontSize" Value="100" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<!--<Style
+		x:Key="LogTextBoxStyle"
+		BasedOn="{StaticResource {x:Type TextBlock}}"
+		TargetType="TextBlock">
+		<Setter Property="Background" Value="SlateGray" />
+		<Setter Property="TextWrapping" Value="Wrap" />
+		<Setter Property="FontSize" Value="12" />
+	</Style>-->
+
+	<Style BasedOn="{StaticResource ComboBoxBaseStyle}" TargetType="controls:SearchComboBox">
+		<Setter Property="Width" Value="280" />
+		<Setter Property="Height" Value="25" />
+	</Style>
+	<Style BasedOn="{StaticResource TextBoxBaseStyle}" TargetType="TextBox">
+		<Setter Property="Width" Value="280" />
+		<Setter Property="Height" Value="25" />
+	</Style>
+
+
 
 
 	<LinearGradientBrush x:Key="CharacteristicBrush" MappingMode="Absolute" StartPoint="0,0" EndPoint="0,24">
