--- a/WslDockerTool.Net5/Views/Container/CreateContainer.xaml
+++ b/WslDockerTool.Net5/Views/Container/CreateContainer.xaml
@@ -2,23 +2,22 @@
 	x:Class="WslDockerTool.Net5.Views.Container.CreateContainer"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:WslDockerTool.Net5.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:hc="https://handyorg.github.io/handycontrol"
 	xmlns:local="clr-namespace:WslDockerTool.Net5.Views.Container"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:prism="http://prismlibrary.com/"
-	Width="400"
-	Height="350"
 	d:DesignHeight="350"
 	d:DesignWidth="400"
 	prism:ViewModelLocator.AutoWireViewModel="True"
 	mc:Ignorable="d">
 	<Grid>
 		<Grid.RowDefinitions>
-			<RowDefinition Height="50" />
-			<RowDefinition Height="50" />
-			<RowDefinition Height="50" />
-			<RowDefinition Height="50" />
+			<RowDefinition Height="80" />
+			<RowDefinition Height="80" />
+			<RowDefinition Height="80" />
+			<RowDefinition Height="80" />
 			<RowDefinition Height="*" />
 			<RowDefinition Height="50" />
 		</Grid.RowDefinitions>
@@ -26,33 +25,37 @@
 			Grid.Row="0"
 			Width="auto"
 			Margin="5,2"
-			Orientation="Horizontal">
+			HorizontalAlignment="Left"
+			Orientation="Vertical">
 			<TextBlock>镜像名称:</TextBlock>
-			<TextBox Width="300" Height="40" />
+			<controls:SearchComboBox />
 		</StackPanel>
 		<StackPanel
 			Grid.Row="1"
 			Width="auto"
 			Margin="5,2"
-			Orientation="Horizontal">
-			<TextBlock>镜像名称:</TextBlock>
-			<TextBox Width="300" Height="40" />
+			HorizontalAlignment="Left"
+			Orientation="Vertical">
+			<TextBlock>容器名称:</TextBlock>
+			<TextBox />
 		</StackPanel>
 		<StackPanel
 			Grid.Row="2"
 			Width="auto"
 			Margin="5,2"
-			Orientation="Horizontal">
+			HorizontalAlignment="Left"
+			Orientation="Vertical">
 			<TextBlock>镜像名称:</TextBlock>
-			<TextBox Width="300" Height="40" />
+			<TextBox />
 		</StackPanel>
 		<StackPanel
 			Grid.Row="3"
 			Width="auto"
 			Margin="5,2"
-			Orientation="Horizontal">
+			HorizontalAlignment="Left"
+			Orientation="Vertical">
 			<TextBlock>镜像名称:</TextBlock>
-			<TextBox Width="300" Height="40" />
+			<TextBox />
 		</StackPanel>
 	</Grid>
 </UserControl>
