--- a/WslDockerTool.Net5/Views/Container/ContainerList.xaml
+++ b/WslDockerTool.Net5/Views/Container/ContainerList.xaml
@@ -1,23 +1,25 @@
 ﻿<UserControl
-	x:Class="WslDockerTool.Net5.Views.Container.ContainerList"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:hc="https://handyorg.github.io/handycontrol"
-	xmlns:local="clr-namespace:WslDockerTool.Net5.Views.Container"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:prism="http://prismlibrary.com/"
-	d:DesignHeight="450"
-	d:DesignWidth="800"
-	prism:ViewModelLocator.AutoWireViewModel="True"
-	mc:Ignorable="d">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="40" />
-			<RowDefinition Height="*" />
-		</Grid.RowDefinitions>
-		<StackPanel>
-			<!--<hc:SplitButton Content="Primary">
+    x:Class="WslDockerTool.Net5.Views.Container.ContainerList"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:WslDockerTool.Net5.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:local="clr-namespace:WslDockerTool.Net5.Views.Container"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:sys="clr-namespace:System;assembly=System.Runtime"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    prism:ViewModelLocator.AutoWireViewModel="True"
+    mc:Ignorable="d">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <StackPanel>
+            <!--<hc:SplitButton Content="Primary">
 				<hc:SplitButton.DropDownContent>
 					<StackPanel>
 						<MenuItem Header="Title" />
@@ -26,9 +28,9 @@
 					</StackPanel>
 				</hc:SplitButton.DropDownContent>
 			</hc:SplitButton>-->
-			<hc:ButtonGroup Width="400">
+            <hc:ButtonGroup Width="400">
 
-				<!--<hc:ContextMenuToggleButton Name="tewer" Content="测试">
+                <!--<hc:ContextMenuToggleButton Name="tewer" Content="测试">
 
 					<hc:ContextMenuToggleButton.Resources>
 						<Style TargetType="ContextMenu">
@@ -44,84 +46,89 @@
 						</ContextMenu>
 					</hc:ContextMenuToggleButton.Menu>
 				</hc:ContextMenuToggleButton>-->
-				<Button
-					Command="{Binding StartCommand}"
-					Content="启动"
-					Style="{DynamicResource ButtonDashedSuccess}" />
+                <Button
+                    Command="{Binding StartCommand}"
+                    CommandParameter="{Binding SelectedItems, ElementName=datagrid}"
+                    Content="启动"
+                    Style="{DynamicResource ButtonDashedSuccess}" />
 
-				<Button
-					Command="{Binding StopCommand}"
-					Content="停止"
-					Style="{DynamicResource ButtonDashedInfo}" />
-				<Button
-					Command="{Binding RestartCommand}"
-					Content="重启"
-					Style="{DynamicResource ButtonDashedSuccess}" />
-				<Button
-					Command="{Binding QueryCommand}"
-					Content="查询"
-					Style="{DynamicResource ButtonDashedSuccess}" />
-				<Button
-					Command="{Binding CreateCommand}"
-					Content="添加"
-					Style="{DynamicResource ButtonDashedInfo}" />
-				<Button
-					Command="{Binding RemoveCommand}"
-					Content="移除"
-					Style="{DynamicResource ButtonDashedInfo}" />
+                <Button
+                    Command="{Binding StopCommand}"
+                    CommandParameter="{Binding SelectedItems, ElementName=datagrid}"
+                    Content="停止"
+                    Style="{DynamicResource ButtonDashedInfo}" />
+                <Button
+                    Command="{Binding RestartCommand}"
+                    CommandParameter="{Binding SelectedItems, ElementName=datagrid}"
+                    Content="重启"
+                    Style="{DynamicResource ButtonDashedSuccess}" />
+                <Button
+                    Command="{Binding QueryCommand}"
+                    Content="查询"
+                    Style="{DynamicResource ButtonDashedSuccess}" />
+                <Button
+                    Command="{Binding CreateCommand}"
+                    Content="添加"
+                    Style="{DynamicResource ButtonDashedInfo}" />
+                <Button
+                    Command="{Binding RemoveCommand}"
+                    CommandParameter="{Binding SelectedItems, ElementName=datagrid}"
+                    Content="移除"
+                    Style="{DynamicResource ButtonDashedInfo}" />
 
 
-			</hc:ButtonGroup>
-		</StackPanel>
+            </hc:ButtonGroup>
+        </StackPanel>
 
-		<DataGrid
-			Grid.Row="1"
-			AutoGenerateColumns="False"
-			HeadersVisibility="All"
-			ItemsSource="{Binding Items}"
-			RowHeaderWidth="60">
+        <DataGrid
+            x:Name="datagrid"
+            Grid.Row="1"
+            AutoGenerateColumns="False"
+            HeadersVisibility="All"
+            ItemsSource="{Binding Items}"
+            RowHeaderWidth="60"
+            SelectionMode="Extended">
 
-			<DataGrid.RowHeaderTemplate>
-				<DataTemplate>
-					<CheckBox IsChecked="{Binding Path=DataContext.IsSelected, Mode=TwoWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGridRow}}}" />
-				</DataTemplate>
-			</DataGrid.RowHeaderTemplate>
+            <DataGrid.RowHeaderTemplate>
+                <DataTemplate>
+                    <CheckBox IsChecked="{Binding Path=IsSelected, Mode=TwoWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGridRow}}}" />
+                </DataTemplate>
+            </DataGrid.RowHeaderTemplate>
 
-			<DataGrid.Columns>
-				<!--<DataGridCheckBoxColumn Binding="{Binding IsSelected}" CanUserResize="False" />-->
+            <DataGrid.Columns>
 
-				<DataGridTextColumn
-					Width="*"
-					Binding="{Binding ID}"
-					CanUserResize="False"
-					Header="id"
-					IsReadOnly="True" />
-				<DataGridTextColumn
-					Width="*"
-					Binding="{Binding NameF}"
-					Header="名称" />
-				<DataGridTextColumn
-					Width="*"
-					Binding="{Binding Image}"
-					Header="镜像名称" />
+                <DataGridTextColumn
+                    Width="*"
+                    Binding="{Binding ID}"
+                    CanUserResize="False"
+                    Header="id"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="*"
+                    Binding="{Binding NameF}"
+                    Header="名称" />
+                <DataGridTextColumn
+                    Width="*"
+                    Binding="{Binding Image}"
+                    Header="镜像名称" />
 
-				<DataGridTextColumn
-					Width="*"
-					Binding="{Binding PortF}"
-					Header="端口" />
-				<DataGridTextColumn
-					Width="*"
-					MinWidth="130"
-					Binding="{Binding Status}"
-					Header="状态" />
+                <DataGridTextColumn
+                    Width="*"
+                    Binding="{Binding PortF}"
+                    Header="端口" />
+                <DataGridTextColumn
+                    Width="*"
+                    MinWidth="130"
+                    Binding="{Binding Status}"
+                    Header="状态" />
 
-				<DataGridTextColumn
-					Width="120"
-					MinWidth="120"
-					Binding="{Binding Created, StringFormat={}{0:yyyy-MM-dd}}"
-					Header="创建时间" />
-			</DataGrid.Columns>
+                <DataGridTextColumn
+                    Width="120"
+                    MinWidth="120"
+                    Binding="{Binding Created, StringFormat={}{0:yyyy-MM-dd}}"
+                    Header="创建时间" />
+            </DataGrid.Columns>
 
-		</DataGrid>
-	</Grid>
+        </DataGrid>
+    </Grid>
 </UserControl>
